--- a/style.css
+++ b/style.css
@@ -147,8 +147,12 @@ li {
 }
 
 @media (max-width:700px) {
-    body {
+    html, body {
         overflow-x: hidden;
+    }
+
+    body {
+        position: relative;
     }
 
     .footer {
